--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "personal-templates"
 version = "0.0.1"
 description = "The author's various templates for tasks in research and data science."
-authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
+authors = ["O957 <127630341+O957@users.noreply.github.com>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
